--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /*  your css code here. If applicable */
+#p1{
+	background-color: yellow;
+	border-width: 1px;
+	border-color: green;
+}
+#p2{
+	background-color: red;
+	border-width: 1px;
+	border-color: black;
+}
+#p3{
+	background-color: green;
+	border-width: 1px;
+	border-color: yellow;
+}
