--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,17 @@
 	background-color: yellow;
 	border-width: 1px;
 	border-color: green;
+	border-style: solid;
 }
 #p2{
 	background-color: red;
 	border-width: 1px;
 	border-color: black;
+	border-style: solid;
 }
 #p3{
 	background-color: green;
 	border-width: 1px;
 	border-color: yellow;
+	border-style: solid;
 }
