--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,17 @@
 /*  your css code here. If applicable */
-#p1{
+#yellow{
 	background-color: yellow;
 	border-width: 1px;
 	border-color: green;
 	border-style: solid;
 }
-#p2{
+#red{
 	background-color: red;
 	border-width: 1px;
 	border-color: black;
 	border-style: solid;
 }
-#p3{
+#green{
 	background-color: green;
 	border-width: 1px;
 	border-color: yellow;
